adds link to about page

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <p class="flow-text left-align">
               SGV Code School aims to provide a premium learning experience for students interested in programing and robotics.  Its expertise is in teaching coding and robotics to motivated middle and high school students.  SGV Code School provides turn-key, complete course offerings which allow private schools and nonprofit organizations to offer in-demand technical curriculum to students with minimal effort.
             </p>
-            <a href="#" class="btn btn-large">Click for more information</a>
+            <a href="about.html" class="btn btn-large">Click for more information</a>
           </div>
         </section>
       </main>
