--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
           <div class="nav-wrapper">
             <div class="container">
-              <a href="#" class="brand-logo"> <span class="black-text">SGV</span> <span class="sub-brand">Code School</span></a>
+              <a href="#" class="brand-logo"><img src="logo.png" class="brand-logo" /></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="sass.html" class="black-text">Sass</a></li>
                 <li><a href="badges.html" class="black-text">Components</a></li>
@@ -24,11 +24,59 @@
             </div>
           </div>
         </nav>
+        <div class="secondary-nav">
+          s
+        </div>
       </header>
       <main>
-        <section class="center">
-          <img src="logo.png"/>
-        </section>
+        <div class="slider">
+          <div class="slider-form">
+            <div class="container">
+              <div class="row">
+                <div class="col s8 offset-s4">
+                  <div class="row">
+                    <div class="input-field col s5">
+                      <input placeholder="Email" id="email" type="email" class="validate">
+                      <label for="email">Email</label>
+                    </div>
+                    <div class="input-field col s5">
+                      <input placeholder="Zipcode" id="zipcode" type="text" class="validate">
+                      <label for="zipcode">Zipcode</label>
+                    </div>
+                    <button class="btn waves-effect waves-light col s2" type="submit" name="action">Submit
+                      <i class="material-icons right">send</i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <ul class="slides">
+            <li class="slide-image" id="slide-1">
+              <div class="caption center-align">
+                <div class="row">
+                  <h2 class="white-text">We teach kids how to code.</h2>
+                </div>
+                <div class="row">
+                  <a class="waves-effect waves-light btn hoverable">Locations</a>
+                  <a class="waves-effect waves-light btn hoverable">Signup Now</a>
+                </div>
+              </div>
+            </li>
+            <li class="slide-image" id="slide-2">
+              <div class="caption left-align">
+                <div class="row">
+                  <div class="col s12">
+                    <h2 class="white-text">We place you in our classes based on your needs.</h2>
+                  </div>
+                  <div class="col s12">
+                    <a class="waves-effect waves-light btn hoverable">Take our Assesment</a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </div>
+        </div>
         <section class="content">
           <div class="container center">
             <div class="row">
@@ -64,33 +112,6 @@
             </div>
           </div>
         </section>
-        <div class="slider">
-          <ul class="slides">
-            <li class="slide-image" id="slide-1">
-              <div class="caption center-align">
-                <div class="row">
-                  <h2 class="white-text">We teach kids how to code.</h2>
-                </div>
-                <div class="row">
-                  <a class="waves-effect waves-light btn hoverable">Locations</a>
-                  <a class="waves-effect waves-light btn hoverable">Signup Now</a>
-                </div>
-              </div>
-            </li>
-            <li class="slide-image" id="slide-2">
-              <div class="caption left-align">
-                <div class="row">
-                  <div class="col s12">
-                    <h2 class="white-text">We place you in our classes based on your needs.</h2>
-                  </div>
-                  <div class="col s12">
-                    <a class="waves-effect waves-light btn hoverable">Take our Assesment</a>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </div>
-        </div>
         <section class="quote valign-wrapper">
           <div class="container valign">
             <blockquote class="flow-text">
@@ -146,6 +167,8 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/bin/materialize.min.js"></script>
+      </script>
+      <script type="text/javascript" src="js/js.cookie.js"></script>
       <script type="text/javascript" src="js/main.js">
 
       </script>
