--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
           <div class="nav-wrapper">
             <div class="container">
-              <a href="#" class="brand-logo"><img src="logo.png" class="brand-logo" /></a>
+              <a href="#" class="brand-logo"><img src="sgv.png" class="brand-logo" /></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="sass.html" class="black-text">Sass</a></li>
                 <li><a href="badges.html" class="black-text">Components</a></li>
@@ -24,8 +24,10 @@
             </div>
           </div>
         </nav>
-        <div class="secondary-nav">
-          s
+        <div class="secondary-nav valign-wrapper">
+          <div class="container valign">
+            <h4 class="white-text logo-text">Code School</h4>
+          </div>
         </div>
       </header>
       <main>
