--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="container">
               <a href="#" class="brand-logo"><img src="sgv.png" class="brand-logo" /></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html" class="black-text">Sass</a></li>
-                <li><a href="badges.html" class="black-text">Components</a></li>
-                <li><a href="collapsible.html" class="black-text">JavaScript</a></li>
+                <li><a href="sass.html" class="black-text">Classes</a></li>
+                <li><a href="badges.html" class="black-text">Camps</a></li>
+                <li><a href="collapsible.html" class="black-text">Clubs</a></li>
               </ul>
             </div>
           </div>
