adds footer, and adds responsive info columns

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </p>
             </div>
             <div class="row">
-              <div class="col s4">
+              <div class="col s12 m4">
                 <i class="large material-icons white-text">keyboard</i>
                 <h3 class="white-text">How To Code</h3>
                 <p class="left-align white-text">
@@ -97,14 +97,14 @@
                   and driven to think creatively <br>words...
                 </p>
               </div>
-              <div class="col s4">
+              <div class="col s12 m4">
                 <i class="large material-icons white-text">school</i>
                 <h3 class="white-text">How To Think</h3>
                 <p class="left-align white-text">
                   words...
                 </p>
               </div>
-              <div class="col s4">
+              <div class="col s12 m4">
                 <i class="large material-icons white-text">person_add</i>
                 <h3 class="white-text">Personal Instruction</h3>
                 <p class="left-align white-text">
@@ -143,25 +143,59 @@
       <footer class="page-footer">
          <div class="container">
            <div class="row">
-             <div class="col l6 s12">
-               <h5 class="white-text">Footer Content</h5>
-               <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-             </div>
-             <div class="col l4 offset-l2 s12">
-               <h5 class="white-text">Links</h5>
+             <div class="col s12 m6 l3">
+               <h5>Contact Us</h5>
                <ul>
-                 <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                 <li><a href="tel:(626)658-STEM">(626) 658 - STEM</a></li>
+                 <li><a href="tel:(626)658-7836">(626) 658-7836</a></li>
+                 <li><a href="mailto:info@sgvcodeschool.com">info@sgvcodeschool.com</a></li>
+                 <br>
+                 <li>Office Hours (PT)</li>
+                 <li>Monday-Friday: 5am-6pm</li>
+                 <li>Saturday: 8am-5pm</li>
+                 <li>Sunday: 10am-7pm</li>
+                 <br>
+                 <li><a href="#googform">Request a Brochure</a></li>
+                 <li><a href="about.html">About SGV Code School</a></li>
+               </ul>
+             </div>
+             <div class="col s12 m6 l3">
+               <h5>Overview</h5>
+               <ul>
+                 <li><a href="story.html">Our Story</a></li>
+                 <li><a href="whyus.html">Why SGV Code School?</a></li>
+                 <li><a href="mission.html">Mission Statement</a></li>
+                 <li><a href="press.html">Press</a></li>
+                 <li><a href="reviews.html">Reviews</a></li>
+                 <li><a href="success.html">Student Successes!</a></li>
+                 <li><a href="terms-conditions.html">Terms &amp; Conditions</a></li>
+                 <li><a href="trademarks.html">Trademarks</a></li>
+                 <li><a href="faq.html">FAQ</a></li>
+               </ul>
+             </div>
+             <div class="col s12 m6 l3">
+               <h5>Programs</h5>
+               <ul>
+                 <li><a href="sumobotsjr.html">Elementary School</a></li>
+                 <li><a href="sumobots.html">Middle School</a></li>
+                 <li><a href="404.html">High School</a></li>
+                 <li><a href="chinese.html">International Students</a></li>
+                 <li><a href="localclub.html">Form a local Club</a></li>
+               </ul>
+             </div>
+             <div class="col s12 m6 l3">
+               <h5>Jobs</h5>
+               <ul>
+                 <li><a href="overview.html">Overview</a></li>
+                 <li><a href="internships.html">Summer Jobs and Internships</a></li>
+                 <li><a href="jobs.html">Work for SGV</a></li>
                </ul>
              </div>
            </div>
          </div>
          <div class="footer-copyright">
            <div class="container">
-           © 2014 Copyright Text
-           <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+             &copy; 2016 SGV Code School
            </div>
          </div>
        </footer>
