--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="container">
               <a href="#" class="brand-logo"><img src="sgv.png" class="brand-logo" /></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html" class="black-text">Classes</a></li>
-                <li><a href="badges.html" class="black-text">Camps</a></li>
-                <li><a href="collapsible.html" class="black-text">Clubs</a></li>
+                <li><a href="sass.html">Classes</a></li>
+                <li><a href="badges.html">Camps</a></li>
+                <li><a href="collapsible.html">Clubs</a></li>
               </ul>
             </div>
           </div>
@@ -32,52 +32,24 @@
       </header>
       <main>
         <div class="slider">
-          <div class="slider-form">
-            <div class="container">
-              <div class="row">
-                <div class="col s8 offset-s4">
-                  <div class="row">
-                    <div class="input-field col s5">
-                      <input placeholder="Email" id="email" type="email" class="validate">
-                      <label for="email">Email</label>
-                    </div>
-                    <div class="input-field col s5">
-                      <input placeholder="Zipcode" id="zipcode" type="text" class="validate">
-                      <label for="zipcode">Zipcode</label>
-                    </div>
-                    <button class="btn waves-effect waves-light col s2" type="submit" name="action">Submit
-                      <i class="material-icons right">send</i>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <ul class="slides">
             <li class="slide-image" id="slide-1">
+              <!--Added empty image tag here to fix problem where slider caption would not show on load-->
+              <!--DO NOT REMOVE!-->
+              <img src="" alt="" />
               <div class="caption center-align">
-                <div class="row">
-                  <h2 class="white-text">We teach kids how to code.</h2>
-                </div>
-                <div class="row">
-                  <a class="waves-effect waves-light btn hoverable">Locations</a>
-                  <a class="waves-effect waves-light btn hoverable">Signup Now</a>
-                </div>
+                <h2 class="white-text">We teach kids how to code.</h2>
+                <a class="waves-effect waves-light btn hoverable">Locations</a>
+                <a class="waves-effect waves-light btn hoverable">Signup Now</a>
               </div>
             </li>
             <li class="slide-image" id="slide-2">
               <div class="caption left-align">
-                <div class="row">
-                  <div class="col s12">
-                    <h2 class="white-text">We place you in our classes based on your needs.</h2>
-                  </div>
-                  <div class="col s12">
-                    <a class="waves-effect waves-light btn hoverable">Take our Assesment</a>
-                  </div>
-                </div>
+                <h2 class="white-text">We place you in our classes based on your needs.</h2>
+                <a class="waves-effect waves-light btn hoverable">Take our Assesment</a>
               </div>
             </li>
-          </div>
+          </ul>
         </div>
         <section class="content">
           <div class="container center">
@@ -136,7 +108,7 @@
             <p class="flow-text left-align">
               SGV Code School aims to provide a premium learning experience for students interested in programing and robotics.  Its expertise is in teaching coding and robotics to motivated middle and high school students.  SGV Code School provides turn-key, complete course offerings which allow private schools and nonprofit organizations to offer in-demand technical curriculum to students with minimal effort.
             </p>
-            <a href="about.html" class="btn btn-large">Click for more information</a>
+            <a href="info.html" class="btn btn-large">Click to get more information</a>
           </div>
         </section>
       </main>
@@ -147,7 +119,7 @@
                <h5>Contact Us</h5>
                <ul>
                  <li><a href="tel:(626)658-STEM">(626) 658 - STEM</a></li>
-                 <li><a href="tel:(626)658-7836">(626) 658-7836</a></li>
+                 <li><a href="tel:(626)658-7836">(626) 658 - 7836</a></li>
                  <li><a href="mailto:info@sgvcodeschool.com">info@sgvcodeschool.com</a></li>
                  <br>
                  <li>Office Hours (PT)</li>
@@ -203,7 +175,6 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/bin/materialize.min.js"></script>
-      </script>
       <script type="text/javascript" src="js/js.cookie.js"></script>
       <script type="text/javascript" src="js/main.js">
 
