--- a/info.html
+++ b/info.html
@@ -30,11 +30,11 @@
       </p>
       <div class="row">
         <form class="col s12" id="gform" method="POST"
-          action="https://script.google.com/macros/s/AKfycbx3wJVt_I9xsATfRLa4LHDKy4r2lU_Ze1hngstoKLQblaHQZKoE/exec">
+          action="https://script.google.com/macros/s/AKfycby8lELx0urqKQ5yrDPx5CYJRC0lRJqGrf41NYow4E8tXvV70No/exec">
           <!-- change the form action to your script url -->
           <div class="row">
             <div class="input-field col s12">
-              <input id="name" name="name" placeholder="What your Mom calls you" class="validate" type="text" >
+              <input id="name" name="name" placeholder="What your Mom calls you" class="validate" type="" >
               <label for="name">Name: </label>
             </div>
           </div>
@@ -54,7 +54,7 @@
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <input class="validate" id="color" name="color" placeholder="green" type="text" />
+              <input class="validate" id="color" name="color" placeholder="green" />
               <label for="color">Favourite Color: </label>
             </div>
           </div>
