fixes form type issues

--- a/info.html
+++ b/info.html
@@ -34,7 +34,7 @@
           <!-- change the form action to your script url -->
           <div class="row">
             <div class="input-field col s12">
-              <input id="name" name="name" placeholder="What your Mom calls you" class="validate" type="" >
+              <input id="name" name="name" placeholder="What your Mom calls you" class="validate" type="text" >
               <label for="name">Name: </label>
             </div>
           </div>
@@ -54,7 +54,7 @@
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <input class="validate" id="color" name="color" placeholder="green" />
+              <input class="validate" id="color" name="color" placeholder="green" type="text"/>
               <label for="color">Favourite Color: </label>
             </div>
           </div>
